--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,8 +13,8 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   : #c0c8aa;
-$secondary : #A3b18a;
-$accent    : #9C27B0;
+$secondary : #CCE2A3;
+$accent    : #A8C69F;
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
