--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #c0c8aa;
+$primary   : #D4E4B7;
 $secondary : #CCE2A3;
-$accent    : #A8C69F;
+$accent    : #b8ce9e;
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
